# canary-ml-platform

./: .gitignore  README.md
docs/adr/: 0001-traffic-split-control-plane.md  0002-standalone-eval-engine.md  0003-dvc-mlflow-artifact-boundary.md  0004-psi-drift-detection.md  README.md  template.md
eval-engine/: .dockerignore  .env.example  Dockerfile  decisions.jsonl  pyproject.toml
eval-engine/app/: main.py
eval-engine/app/clients/: gateway_client.py  metrics_client.py  prediction_log_reader.py  prometheus_client.py
eval-engine/app/core/: config.py  logging.py
eval-engine/app/models/: decision.py
eval-engine/app/policy/: evaluator.py  psi.py
gateway/: Dockerfile  go.mod
gateway/cmd/gateway/: main.go
gateway/internal/config/: config.go
gateway/internal/control/: split.go  (+1 more)
infra/: docker-compose.yml
infra/k8s/: .eval-engine.yaml.swp  eval-engine.yaml  gateway.yaml  model-server-canary.yaml  model-server-stable.yaml  namespace.yaml
infra/prometheus/: prometheus.yml
model-server/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
model-server/app/: main.py
model-server/app/api/: deps.py
model-server/app/api/routes/: health.py  predict.py  predictions.py
model-server/app/core/: config.py  metrics.py
model-server/app/models/: loader.py
model-server/app/schemas/: prediction.py
model-server/app/services/: inference.py  prediction_logger.py
model-server/logs/: canary_predictions.jsonl  stable_predictions.jsonl
model-server/tests/: conftest.py  test_inference_service.py  test_routes.py
training/: train_placeholder.py
(+5 files in other folders)
