[project]
name = "eval-engine"
version = "0.1.0"
description = "Evaluation and promote/rollback policy engine for canary-ml-platform"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.4", "black>=24.4"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]